...
    large: 700,
    tablet: 650,
    default: undefined,
  });

  return (
    <SafeAreaView style={styles.container} testID="privacy-screen">
      {/* Header */}
      <View style={styles.header}>
        <TouchableOpacity
          onPress={() => {
            if (router.canGoBack()) {
              router.back();
...
